--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,17 +1,15 @@
 .project-flex {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+   justify-content: center;
     width: 80%;
     margin: 0 auto;
 } 
 
 
-  /* Style the back side */
   .card {
     width: 250px;
-    height: 250px;
-    text-align: center;
+    height: auto;
     background-color: white;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
@@ -21,11 +19,22 @@
     border: 2px solid rgba(0,0,0, 0.1);
   } 
 
+  .card,
+  .card h2 {
+    text-align: center;
+  }
+  
+  .description {
+    text-align: left;
+    padding-left: 10px;
+  }
+
   
   .card img.logo {
     width: 20%;
+    box-shadow: 5px 7px rgba(0,0,0,.5);
+    border-radius: 12px;
   }
-
 
 @media screen and (max-width: 780px) {
   .flex-container i.fas {
