--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -2,15 +2,20 @@
 .navigation {
     /* critical sizing and position styles */
    font-size: 1.25em;
-   width: 100%;
-   height: 110%;
+   width: 240px;
+   height: auto;
    position: fixed;
-   margin-top: -5px;
-   right: 0;
-   z-index: 0; /*put's it behind everything/*
-   /* non-critical appearance styles */
+   background-color: rgba(238,174,202);
    list-style: none;
-   background-color: rgba(238,174,202, .5);
+   border-radius: 10px;
+   top: -300px;
+   left: -40px;
+   z-index: -1;
+}
+
+.active {
+   top: 30px;
+   z-index: 1;
 }
 
 .nav-item {
@@ -18,6 +23,7 @@
    border-top: 1px solid white;
    border-bottom: 1px solid white;
    text-decoration: none;
+   border-radius: 10px;
 }
 
 a.nav-item, 
@@ -36,11 +42,25 @@ a.nav-item:hover {
    cursor: pointer;
 }
 
-.move-over {
-   left: 200px !important; /*Had to put important so it over-rode the left 0 below'*/
-   box-shadow: 0 0 5px 5px rgba(0,0,0,0.5);
+.fa-hamburger, .navigation {
+   transition: 0.2s;
+ }
+ 
+ .fa-hamburger,
+ .fa-times {
+   padding: 5px;
+   z-index: 1;
+ }
+ 
+ .fa-hamburger:hover,
+ .fa-times:hover {
+   cursor: pointer;
 
-}
+ }
+
+ 
+
+
 
 
 
