--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -14,8 +14,14 @@
 }
 
 .active {
-   top: 30px;
+   top: -20px;
    z-index: 1;
+}
+
+.move-over {
+   position: relative;
+   right: -240px;
+   transition-delay: 1s;
 }
 
 .nav-item {
@@ -23,8 +29,8 @@
    border-top: 1px solid white;
    border-bottom: 1px solid white;
    text-decoration: none;
-   border-radius: 10px;
 }
+
 
 a.nav-item, 
 a.nav-item:visited {
@@ -42,13 +48,14 @@ a.nav-item:hover {
    cursor: pointer;
 }
 
-.fa-hamburger, .navigation {
+.fa-hamburger, .navigation, fa-times {
    transition: 0.2s;
  }
  
  .fa-hamburger,
  .fa-times {
    padding: 5px;
+   font-size: 3em;
    z-index: 1;
  }
  
